hphp/hack/test/typecheck/ppl/require_extends2.php
<?hh // strict

// PPL interfaces and traits require extending PPL classes
abstract class RequireMe {
}

<<__PPL>>
interface BaseInterface {
  require extends RequireMe;
}
